2004-07-07(Wed) 16:04:30 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/shellbot.nb, plugins/evalbot.nb : fix bugs
	around constant search path

	* ndk_state.rb(channel_member_mode) : added

	* ndk_bot.rb : remove @raw_prefix


2004-07-07(Wed) 10:18:51 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/weba.nb : fix some issues


2004-07-06(Tue) 22:38:58 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_client.rb : fix exception bug

	* ndk_manager.rb, ndk_config.rb : fix reload process

	* nadokarc : fix typo

	* plugins/weba.nb : fix some bugs, support writing

	* tagparts.rb : added(required by weba)


2004-07-05(Mon) 15:40:09 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_config.rb : change default Channel_Info,
	:timing as :startup

	* ndk_manager.rb : fix nick change bugs

	* plugins/weba.nb : added(test version)


2004-07-05(Mon) 13:13:26 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : add execption hook(client thread)


2004-07-05(Mon) 09:43:12 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : fix bug


2004-07-05(Mon) 08:31:35 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_logger.rb : ignore IOError when logging

	* plugins/googlebot.nb : add option ':googlec_maxwords'


2004-07-05(Mon) 08:02:43 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : auto detect filename encoding(carelessly)


2004-07-05(Mon) 07:28:17 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc, ndk_config.rb : add 'Mode' option and
	  Channel_Info[:initial_mode] option

	* nadokarc, ndk_config.rb : add 'FilenameEncoding' option

	* ndk_logger.rb, ndk_config.rb : support japanese character
	encoding channel name

	* ndk_config.rb : fix canonical_channel_name and add
	identical_channel_name

	* ndk_manager.rb : support "/nadoka reconnect" command

	* ndk_manager.rb : ping to server and check this response,
	due to check connection

	* ndk_manager.rb, ndk_state.rb : fix behavior when server
	connection is closed


2004-07-04(Sun) 17:50:06 +0900  Koichi Sasada  <ko1@atdot.net>
