@@ -12,10 +12,11 @@
 #
 # To make bot for nadoka, see this code.
 #
-
+require 'ndk_manager'
 module Nadoka
-  
   class NDK_Bot
+    Cmd = ::Nadoka::Cmd
+    Rpl = ::Nadoka::Rpl
 
     def initialize manager, config, bot_config
       @manager = manager
